<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text1"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/about_content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text2"
        android:textSize="15sp"
        />

    <Button android:id="@+id/about_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_return"
        />

</LinearLayout>